5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4443/executions/1716_2496.log
== TEST (2019-05-07 17:38:53) 
-- CODE:
# Primeiro input
num = int(input("Digite um numero: "))

soma = 0
# Laco de repeticao
while (num > -1):
	soma = soma + num
	print(soma)
	
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 17:39:13) 
-- CODE:
# Primeiro input
num = int(input("Digite um numero: "))

soma = 0
# Laco de repeticao
while (num > -1):
	soma = soma + num
print(soma)
	
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- ERROR:
File "XXXX", line 11
    num = int(input())
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 17:39:35) 
-- CODE:
# Primeiro input
num = int(input("Digite um numero: "))

soma = 0
# Laco de repeticao
while (num > -1):
	soma = soma + num
print(soma)
	
	# Inputs seguintes
num = int(input("Digite um numero: "))

-- ERROR:
File "XXXX", line 11
    num = int(input())
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 17:40:35) 
-- CODE:
# Primeiro input
num = int(input("Digite um numero: "))

soma = 0
# Laco de repeticao
while (num > -1):
	soma = soma + num
	print(soma)
	
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- ERROR:
File "XXXX", line 11
    num = int(input())
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-07 17:41:09) 
-- CODE:
# Primeiro input
num = int(input("Digite um numero: "))

soma = 0
# Laco de repeticao
while (num > -1):
	soma = soma + num
	print(soma)
	
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- EXECUTION TIME:
0.124035
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:

-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
0
0
0
0
0
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
10953
43606
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 17:42:35) 
-- CODE:
# Primeiro input
num = int(input("Digite um numero: "))

soma = 0
# Laco de repeticao
while (num > -1):
	soma = soma + num
	if (num == -1)
	soma = soma
	
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- ERROR:
File "XXXX", line 8
    if (num == -1)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 17:42:45) 
-- CODE:
# Primeiro input
num = int(input("Digite um numero: "))

soma = 0
# Laco de repeticao
while (num > -1):
	soma = soma + num
	if (num == -1):
	soma = soma
	
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- ERROR:
File "XXXX", line 9
    soma = soma
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 17:42:53) 
-- CODE:
# Primeiro input
num = int(input("Digite um numero: "))

soma = 0
# Laco de repeticao
while (num > -1):
	soma = soma + num
	if (num == -1):
		soma = soma
	
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- ERROR:
File "XXXX", line 9
    soma = soma
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 17:43:12) 
-- CODE:
# Primeiro input
num = int(input("Digite um numero: "))

soma = 0
# Laco de repeticao
while (num > -1):
	soma = soma + num
	if (num == -1):
		soma = soma
	print(soma)
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- ERROR:
File "XXXX", line 9
    soma = soma
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 17:43:44) 
-- CODE:
# Primeiro input
num = int(input("Digite um numero: "))

soma = 0
# Laco de repeticao
while (num > -1):
	soma = soma + num
	if (num == -1):
		soma = soma
		print(soma)
	print(soma)
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- ERROR:
File "XXXX", line 9
    soma = soma
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-07 17:44:15) 
-- CODE:
# Primeiro input
num = int(input("Digite um numero: "))

soma = 0
# Laco de repeticao
while (num > -1):
	soma = soma + num
	if (num == -1):
		soma = soma
		
	print(soma)
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- EXECUTION TIME:
0.167507
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:

-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
0
0
0
0
0
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
10953
43606
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 17:44:40) 
-- CODE:
# Primeiro input
num = int(input("Digite um numero: "))

soma = 0
# Laco de repeticao
while (num > -1):
	soma = soma + num
	if (num == -1):
		soma = soma
	print(soma)
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- ERROR:
File "XXXX", line 9
    soma = soma
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 17:46:27) 
-- CODE:
# Primeiro input
num = int(input("Digite um numero: "))

soma = 0
# Laco de repeticao
while (num > -1):
	soma = soma + num
	if (num == -1):
		print(soma)
	print(soma)	
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- ERROR:
File "XXXX", line 9
    soma = soma
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 17:47:00) 
-- CODE:
# Primeiro input
num = int(input("Digite um numero: "))

soma = 0
# Laco de repeticao
while (num > -1):
	soma = soma + num
	print(soma)	
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- ERROR:
File "XXXX", line 9
    soma = soma
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-07 17:48:08) 
-- CODE:
# Primeiro input
num = int(input("Digite um numero: "))

soma = 0
# Laco de repeticao
while (num > -1):
	soma = soma + num
	print(soma)	
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- EXECUTION TIME:
0.186465
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:

-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
0
0
0
0
0
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
10953
43606
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 07:34:37) 
-- CODE:
# Primeiro input
num = int(input("Digite um numero: "))

soma = 0
# Laco de repeticao
while (num != -1):
	soma = soma + num
	print(soma)	
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- OUTPUT:
-525
550
883
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 07:35:20) 
-- CODE:
# Primeiro input
num = int(input("Digite um numero: "))

soma = 0
# Laco de repeticao
while (num != -1):
	soma = soma + num
		# Inputs seguintes
	num = int(input("Digite um numero: "))
print(soma)
-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 07:35:43) 
-- CODE:
# Primeiro input
num = int(input("Digite um numero: "))

soma = 0
# Laco de repeticao
while (num > -1):
	soma = soma + num
		# Inputs seguintes
	num = int(input("Digite um numero: "))
print(soma)
-- EXECUTION TIME:
0.145246
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
0
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
43606
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 07:36:00) 
-- CODE:
# Primeiro input
num = int(input("Digite um numero: "))

soma = 0
# Laco de repeticao
while (num != -1):
	soma = soma + num
		# Inputs seguintes
	num = int(input("Digite um numero: "))
print(soma)
-- EXECUTION TIME:
0.127544
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
32653
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 18:30:53) 
-- CODE:
# Primeiro input
num = int(input("Digite um numero: "))

soma = 0
# Laco de repeticao
while (num != -1):
	soma = soma + num
		# Inputs seguintes
	num = int(input("Digite um numero: "))
print(soma)
-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 18:32:09) 
-- CODE:
# Primeiro input
num = int(input("Digite um numero: "))

soma = 0
# Laco de repeticao
while (num != -1):
	soma = soma + num
		# Inputs seguintes
	num = int(input("Digite um numero: "))
print(soma)
-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
